--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,12 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
     implementation 'com.github.traex.rippleeffect:library:1.3'
     implementation 'com.android.support:design:28.0.0-rc01'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+    implementation 'com.google.firebase:firebase-auth:11.6.0'
     testImplementation 'junit:junit:4.12'
     implementation 'jp.wasabeef:blurry:2.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
 
     //Networking
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
