--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.2.50'
     ext.android_plugin_version = '3.1.4'
+    ext.anko_version='0.10.5'
     repositories {
         google()
         jcenter()
